# dune-python

./: BSD  CMakeLists.txt  COPYING  README  README.md  config.h.cmake  dune-python.pc.in  dune.module
cmake/modules/: CMakeLists.txt  CheckPythonPackage.cmake  CheckUbuntu.cmake  CreateVirtualEnv.cmake  DuneExecuteProcess.cmake  DuneInstallPythonPackage.cmake  DunePythonMacros.cmake  DunePythonTesting.cmake  DuneSphinxCMakeDoc.cmake  DuneVirtualEnv.cmake  FindPython2Interp.cmake  FindPython3Interp.cmake  FindSphinx.cmake  FindSphinxAPIDoc.cmake  InstallPythonPackage.cmake  InstallPythonScript.cmake  PythonVersion.cmake  VirtualEnvWrapper.cmake  env-wrapper.sh.in  install_python_package.cmake
cmake/templates/: env-wrapper.sh.in  env-wrapper.sh.in~
doc/: technical.tex
doc/buildsystem/: CMakeLists.txt  dune-python.rst
doc/sphinx/: conf.py  contents.rst  extract_cmake_data.py  index.rst  intro.rst  release.rst  sphinx_cmake_dune.py  variables.rst
python/: setup.py
python/dune/: __init__.py
python/dune/common/: __init__.py
python/dune/common/ini/: parser.py
python/dune/common/modules/: __init__.py  closure.py  file.py  parser.py  repositories.py
python/dune/common/parametertree/: parser.py
python/tests/: test_dotdict.py  test_ini_parser.py
